--- a/website/src/assets/css/styles.css
+++ b/website/src/assets/css/styles.css
@@ -1222,7 +1222,7 @@ body {
   display: grid;
   grid-template-columns: repeat(1, -webkit-max-content);
   grid-template-columns: repeat(1, max-content);
-  justify-content: center;
+  justify-content: space-around;
   gap: 1rem;
 }
 
