--- a/website/src/assets/css/styles.css
+++ b/website/src/assets/css/styles.css
@@ -594,6 +594,11 @@ video {
           animation: button 3s infinite;
 }
 
+.offer-container {
+  grid-template-rows: -webkit-max-content 224px;
+  grid-template-rows: max-content 224px;
+}
+
 .visible {
   visibility: visible;
 }
@@ -727,6 +732,11 @@ body {
   width: 11rem;
   --tw-blur: blur(64px);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.shape-big {
+  height: 400px;
+  width: 400px;
 }
 
 /** TITLE **/
@@ -1175,8 +1185,12 @@ body {
 
 .brand-container {
   display: grid;
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-  gap: 1rem;
+  grid-template-columns: repeat(3, -webkit-max-content);
+  grid-template-columns: repeat(3, max-content);
+  align-items: center;
+  justify-content: center;
+  gap: 5rem;
+  padding-bottom: 2rem;
 }
 
 @media (min-width: 768px) {
@@ -1188,15 +1202,16 @@ body {
 .brand-content {
   transition: .3s;
   display: grid;
-  height: 160px;
-  width: 160px;
-  row-gap: 2rem;
-  border-radius: 0.375rem;
-  padding: 1.25rem;
+  row-gap: 1.5rem;
+  opacity: 0.4;
+}
+
+.brand-content:hover {
+  opacity: 1;
 }
 
 .brand-content img {
-  width: 3.5rem;
+  width: 2.5rem;
   justify-self: center;
 }
 
@@ -2081,8 +2096,6 @@ h3.car-price {
 
 .offer-container {
   display: grid;
-  grid-template-columns: -webkit-max-content 224px;
-  grid-template-columns: max-content 224px;
   gap: 1.5rem;
 }
 
@@ -2101,4 +2114,84 @@ h3.car-price {
 .offer-info, 
 .offer-img {
   position: relative;
+}
+
+.offer-info {
+  text-align: center;
+}
+
+.offer-info h2 {
+  margin-bottom: 2rem;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 600;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.offer-info p {
+  margin-bottom: 3rem;
+}
+
+.offer-img {
+  position: absolute;
+  bottom: 2rem;
+  right: -5rem;
+  width: 500px;
+  max-width: initial;
+}
+
+/** FOOTER **/
+
+.footer {
+  position: relative;
+  overflow: hidden;
+}
+
+.footer .shape-small, 
+.footer .shape-big {
+  position: absolute;
+}
+
+.footer-container {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 2rem;
+  padding-left: 2rem;
+}
+
+@media (min-width: 640px) {
+  .footer-container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .footer-container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .footer-container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .footer-container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .footer-container {
+    max-width: 1536px;
+  }
+}
+
+.footer-container {
+  display: grid;
+  gap: 1.5rem;
 }
